syntax = "proto3";

package grpc;

import "google/protobuf/empty.proto";

option go_package = "justino.com/poc/grpc";

// Interface exported by the server.
service ChatService {
  rpc MakeRequests(stream ClientRequest) returns (stream ServerResponse) {}
  
  rpc ConsumeMessages(google.protobuf.Empty) returns (stream ServerResponse) {}
  
  rpc SendMessage(ChatMessage) returns (ServerResponse) {}

  rpc GetMessages(google.protobuf.Empty) returns (ChatMessage) {}
  
  rpc GetPayload(PayloadSize) returns (Payload) {}
}

message Payload {
  string content = 1;
}

message PayloadSize {
  Size size = 1;
}

message ChatMessage {
  string content = 1;
}

message ServerResponse {
  string content = 1;
}

message ClientRequest {
  Action action = 1;
  string content = 2; 
}

enum Action {
  LOGOUT=0;
  SET_STATUS=1;
}

enum Size {
  TINY=0;
  SMALL=1;
  MEDIUM=2;
  LARGE=3;
  HUGE=4;
}
